# XRD-Analysis

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md
docs/: API_REFERENCE.md  README.md  USER_GUIDE.md  project_analysis_report.md
docs/engineering_specs/: 01_Peak_Diagnosis_Algorithm.md  01_Peak_Diagnosis_Algorithm_EN.md  02_Grain_Size_Algorithm.md  02_Grain_Size_Algorithm_EN.md  03_Texture_Algorithm.md  03_Texture_Algorithm_EN.md  04_Stacking_Fault_Algorithm.md  04_Stacking_Fault_Algorithm_EN.md  05_Residual_Stress_Algorithm.md  05_Residual_Stress_Algorithm_EN.md  06_Appendix_FWHM_Data.md  06_Appendix_FWHM_Data_EN.md  07_XRay_Penetration_Depth.md  07_XRay_Penetration_Depth_EN.md  08_Algorithm_Principles_and_References.md  08_Algorithm_Principles_and_References_EN.md  09_Thesis_Audit_5Phase.md  10_External_Repo_Paper_Benchmark.md  11_20Phase_Optimization_Plan_EN.md  11_PhD_20Phase_Optimization_Plan_EN.md  12_Reference_Catalog_100plus_EN.md  13_20Phase_Execution_Log_EN.md  13_PhD_20Phase_Execution_Log_EN.md
scripts/: README.md  _script_utils.py  audit_data_integrity.py  calibrate_instrument.py  extract_fwhm_tables.py  generate_defect_plots.py  generate_fitting_diagnosis.py  generate_fwhm_markdown.py  generate_fwhm_plots.py  generate_scherrer_plots.py  generate_texture_plots.py  generate_wh_plots.py  run_20phase_audit.py  run_phd20_audit.py  verify_angle_accuracy.py  verify_background_correction.py  verify_elastic_moduli.py  verify_physics.py
tests/: __init__.py  test_analysis_pipeline.py  test_caglioti.py  test_cli_config.py  test_cli_outputs.py  test_config.py  test_copper_crystal.py  test_copper_crystal_advanced.py  test_data_loader.py  test_defect_analysis.py  test_peak_fitting.py  test_physics.py  test_preprocessing_pipeline.py  test_scherrer.py  test_script_utils.py  test_texture.py  test_validation.py  test_visualization.py  test_williamson_hall.py
xrd_analysis/: __init__.py  __version__.py  cli.py
xrd_analysis/analysis/: __init__.py  data_loader.py  peak_finder.py  pipeline.py  report_generator.py
xrd_analysis/core/: __init__.py  config.py  config_loader.py  constants.py  copper_crystal.py  exceptions.py  types.py  units.py
xrd_analysis/fitting/: __init__.py  hkl_assignment.py  ka_doublet.py  lm_optimizer.py  peak_detection.py  peak_fitter.py  pseudo_voigt.py  pv_area.py  quality_metrics.py
xrd_analysis/methods/: __init__.py  caglioti.py  defect_analysis.py  scherrer.py  texture.py  williamson_hall.py
xrd_analysis/preprocessing/: __init__.py  background.py  data_loader.py  kalpha_strip.py  pipeline.py  smoothing.py  validation.py
xrd_analysis/validation/: __init__.py  error_analysis.py  goodness_of_fit.py
xrd_analysis/visualization/: __init__.py  defect_plots.py  fitting_plots.py  fwhm_compare_integral_methods.py  fwhm_plots.py  generate_fitting_diagnosis.py  generate_plots.py  generate_texture_plots.py  scherrer_plots.py  style.py  texture_plots.py  wh_plots.py
