[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xrd-analysis"
dynamic = ["version"]
description = "Advanced XRD Crystallite Size Analysis System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "XRD-Analysis Team"}
]
keywords = ["XRD", "crystallography", "Scherrer", "texture analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.12.20250915",
]

[project.scripts]
xrd-analysis = "xrd_analysis.cli:main"

[project.urls]
Homepage = "https://github.com/Shuruyue/XRD-Analysis"
Documentation = "https://github.com/Shuruyue/XRD-Analysis#readme"
Repository = "https://github.com/Shuruyue/XRD-Analysis"

[tool.setuptools.packages.find]
where = ["."]
include = ["xrd_analysis*"]

[tool.setuptools.dynamic]
version = {attr = "xrd_analysis.__version__.__version__"}

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Phase 1 baseline:
# - Keep correctness and import hygiene strict (E/F/W/I)
# - Keep safe modernization checks (UP), but postpone high-noise typing rewrites
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501", "E741", "UP006", "UP035"]

[tool.ruff.lint.per-file-ignores]
# Package-level API initialization and backward-compatible re-exports
# intentionally require non-top-level imports in these modules.
"xrd_analysis/__init__.py" = ["E402"]
"xrd_analysis/analysis/pipeline.py" = ["E402", "I001"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
# Phase 1 baseline:
# Keep mypy in CI, but suppress legacy high-noise categories and
# ratchet these codes back in module-by-module in later phases.
disable_error_code = [
    "arg-type",
    "assignment",
    "attr-defined",
    "call-arg",
    "index",
    "no-any-return",
    "return",
    "return-value",
    "var-annotated",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
